[package]
name = "loom"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
instant-acme = "0.7"
rcgen = "0.13"
tokio-util = { version = "0.7", features = ["io"] }
arc-swap = "1"
chrono = "0.4"
x509-parser = "0.16"
serde_json = "1"
pem = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
